[package]
name = "ne-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-credential-types = "1.1.1"
aws-sdk-s3 = { version = "1.10.0", features = ["behavior-version-latest", "rt-tokio"], default-features = false }
aws-smithy-runtime-api = { version = "1.1.1", features = ["client"] }
aws-smithy-runtime = { version = "1.1.1", features = ["tls-rustls"] }
aws-smithy-types = { version = "1.1.1", features = ["http-body-0-4-x"] }
rustls = "0.21.9"
bytes = "1.5.0"
chrono = "0.4.31"
http = "0.2.8"
http-body = "0.4.6"
pin-project = "1.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
rustls-pemfile = "1.0.3"

[dependencies.hyper-rustls]
version = "0.24.2"
features = ["http2"]

[lib]
crate-type = ["cdylib"]
