[package]
name = "ne-s3"
description = "s3 client with C interface"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.bundle]
name = "ne-s3"
identifier = "com.netease.nmc.demo"
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."

[dependencies]
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-credential-types = "1.1.1"
aws-sdk-s3 = { version = "1.10.0", features = ["behavior-version-latest", "rt-tokio"], default-features = false }
aws-smithy-runtime-api = { version = "1.1.1", features = ["client"] }
aws-smithy-runtime = { version = "1.1.1", features = ["tls-rustls"] }
aws-smithy-types = { version = "1.1.1", features = ["http-body-0-4-x"] }
rustls = "0.21.9"
bytes = "1.5.0"
chrono = "0.4.31"
http = "0.2.8"
http-body = "0.4.6"
pin-project = "1.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
rustls-pemfile = "1.0.3"
log = "0.4.20"
flexi_logger = "0.27.3"
sysinfo = "0.30.1"
clap = { version = "4.4.11", features = ["derive"] }
urlencoding = "2.1.3"

[dependencies.hyper-rustls]
version = "0.24.2"
features = ["http2"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ne-s3-client"
path = "src/main.rs"
