[package]
name = "ne-s3"
description = "s3 client with C interface"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.bundle]
name = "ne-s3"
identifier = "com.netease.nmc.demo"
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."

[dependencies]
rust-s3 = { version = "0.34.0-rc4", features = ["no-verify-ssl"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
log = "0.4.20"
flexi_logger = "0.27.3"
sysinfo = "0.30.1"
clap = { version = "4.4.11", features = ["derive"] }
urlencoding = "2.1.3"
tokio-stream = "0.1.14"
openssl = { version = "0.10.62", features = ["vendored"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ne-s3-client"
path = "src/main.rs"
